# ideapad-programs

./: Anchor.toml
programs/ideapad-programs/: Cargo.toml
programs/ideapad-programs/src/: error.rs  lib.rs
tests/: ideapad-programs.ts
