[package]
name = "ideapad-programs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ideapad_programs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = {version= "0.29.0", features=["metadata"]}
spl-stake-pool = {version="1.0.0", features=["no-entrypoint"]}
